// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Documentation: Card CardText renders 1`] = `
<div
  className="col-md-12 col-lg-10 doc-body"
>
  <ExperimentalComponentAlert />
  <p
    className="lead"
  >
    Card...
  </p>
  <DefaultBehaviour />
  <CardTypes />
</div>
`;

exports[`Documentation: Card CardTypes renders 1`] = `
<Fragment>
  <h2
    id="card-types"
  >
    Card Types
  </h2>
  <p>
    To decide how your cards will look use 
    <Property
      value=".card-default"
    />
    , 
    <Property
      value=".card-brand"
    />
    , or 
    <Property
      value=".card-light"
    />
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <div
      className="cards"
    >
      <Card
        btnTxt="Button"
        footerLinkTxt="You wanna click this link?"
        footerTxt="This is some text that goes in the footer."
        imgSrc="https://picsum.photos/300"
        smallText="And the small text"
        text="This is the cards text"
        title="Card default"
        type="default"
      >
        <MediaObject
          heading="Bob Corlsan"
          icon="account_circle"
          muted={true}
          size="sm"
          text="bob.corlsan@payex.com"
          textSmall={true}
        />
      </Card>
      <Card
        btnTxt="Button"
        footerLinkTxt="You wanna click this link?"
        footerTxt="This is some text that goes in the footer."
        imgSrc="https://picsum.photos/300"
        smallText="And the small text"
        text="This is the cards text"
        title="Card brand"
        type="brand"
      >
        <MediaObject
          heading="725 NOK"
          icon="account_balance"
          muted={true}
          size="sm"
          text="Outstanding balance"
          textSmall={true}
        />
      </Card>
      <Card
        btnTxt="Button"
        footerLinkTxt="You wanna click this link?"
        footerTxt="This is some text that goes in the footer."
        imgSrc="https://picsum.photos/300"
        smallText="And the small text"
        text="This is the cards text"
        title="Card light"
        type="light"
      >
        <MediaObject
          heading="75%"
          icon="verified_user"
          muted={true}
          size="sm"
          text="Complete"
          textSmall={true}
        />
      </Card>
    </div>
  </ComponentPreview>
</Fragment>
`;

exports[`Documentation: Card DefaultBehaviour renders 1`] = `
<Fragment>
  <h2
    id="default-behaviour"
  >
    Default behaviour
  </h2>
  <p>
    Wrap indiviual cards in the 
    <Property
      value=".cards"
    />
     class to display them lined up next to each other. When the window reaches 
    <Link
      replace={false}
      to="/docs/core/breakpoints"
    >
      breakpoint
    </Link>
     sm the cards will switch to mobile view and take up one row each and stretch to fill the width of the container.
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <div
      className="cards"
    >
      <Card
        btnTxt="Button"
        footerLinkTxt="You wanna click this link?"
        footerTxt="This is some text that goes in the footer."
        imgSrc="https://picsum.photos/300"
        smallText="And the small text"
        text="This is the cards text"
        title="Card default"
        type="default"
      >
        <MediaObject
          heading="Bob Corlsan"
          icon="account_circle"
          muted={true}
          size="sm"
          text="bob.corlsan@payex.com"
          textSmall={true}
        />
      </Card>
      <Card
        btnTxt="Button"
        footerLinkTxt="You wanna click this link?"
        footerTxt="This is some text that goes in the footer."
        imgSrc="https://picsum.photos/300"
        smallText="And the small text"
        text="This is the cards text"
        title="Card default"
        type="default"
      >
        <MediaObject
          heading="725 NOK"
          icon="account_balance"
          muted={true}
          size="sm"
          text="Outstanding balance"
          textSmall={true}
        />
      </Card>
      <Card
        btnTxt="Button"
        footerLinkTxt="You wanna click this link?"
        footerTxt="This is some text that goes in the footer."
        imgSrc="https://picsum.photos/300"
        smallText="And the small text"
        text="This is the cards text"
        title="Card default"
        type="default"
      >
        <MediaObject
          heading="75%"
          icon="verified_user"
          muted={true}
          size="sm"
          text="Complete"
          textSmall={true}
        />
      </Card>
    </div>
  </ComponentPreview>
</Fragment>
`;

exports[`Documentation: Card renders 1`] = `
<div
  className="doc-container"
>
  <div
    className="row"
  >
    <CardText />
    <DocToc
      component={[Function]}
    />
  </div>
</div>
`;
